@@ -1,4 +1,4 @@
-SUBDIRS = amarok
+SUBDIRS = amarok doc
 EXTRA_DIST = amarok.kdevprj admin AUTHORS COPYING ChangeLog INSTALL README TODO amarok.lsm 
 AUTOMAKE_OPTIONS = foreign 
 
